small overflow fix

--- a/flowers.scss
+++ b/flowers.scss
@@ -5,6 +5,7 @@ $flower-size: 20px;
   top: 0;
   left: 0;
   right: 0;
+  overflow: hidden;
   position: absolute;
   user-select: none;
   pointer-events: none;
@@ -18,6 +19,7 @@ $flower-size: 20px;
       transparent;
   }
 }
+
 .h-flowers {
   display: flex;
   transform: translateY(-60%);
